-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
$ valgrind --leak-check=full lst list_group
==91547== Memcheck, a memory error detector
==91547== Copyright (C) 2002-2022, and GNU GPL'd, by Julian Seward et al.
==91547== Using Valgrind-3.22.0 and LibVEX; rerun with -h for copyright info
==91547== Command: ./lnet/utils/.libs/lst list_group
==91547==
Reader error: 'Object not found' at 0
==91547==
==91547== HEAP SUMMARY:
==91547== in use at exit: 65,912 bytes in 4 blocks
==91547== total heap usage: 60 allocs, 56 frees, 282,087 bytes allocated
==91547==
==91547== 56 bytes in 1 blocks are definitely lost in loss record 1 of 4
==91547== at 0x484BF70: calloc (vg_replace_malloc.c:1595)
==91547== by 0x487DF86: yaml_emitter_set_streaming_output_netlink (liblnetconfig_netlink.c:1815)
==91547== by 0x487E10A: yaml_emitter_set_output_netlink (liblnetconfig_netlink.c:1870)
==91547== by 0x403452: lst_yaml_groups.constprop.0 (lst.c:1165)
==91547== by 0x404CAD: jt_lst_list_group (lst.c:2027)
==91547== by 0x48828F4: cfs_parser_execarg (parser.c:177)
==91547== by 0x48828F4: cfs_parser (parser.c:160)
==91547== by 0x4A0358F: (below main) (in /usr/lib64/libc.so.6)
==91547==
==91547== 224 bytes in 1 blocks are definitely lost in loss record 2 of 4
==91547== at 0x484BF70: calloc (vg_replace_malloc.c:1595)
==91547== by 0x499846D: nl_cb_alloc (in /usr/lib64/libnl-3.so.200.26.0)
==91547== by 0x499CC85: nl_socket_alloc (in /usr/lib64/libnl-3.so.200.26.0)
==91547== by 0x4033A2: lst_yaml_groups.constprop.0 (lst.c:1148)
==91547== by 0x404CAD: jt_lst_list_group (lst.c:2027)
==91547== by 0x48828F4: cfs_parser_execarg (parser.c:177)
==91547== by 0x48828F4: cfs_parser (parser.c:160)
==91547== by 0x4A0358F: (below main) (in /usr/lib64/libc.so.6)
==91547==
==91547== 65,632 (96 direct, 65,536 indirect) bytes in 1 blocks are definitely lost in loss record 4 of 4
==91547== at 0x484BF70: calloc (vg_replace_malloc.c:1595)
==91547== by 0x487DD13: yaml_parser_set_input_netlink (liblnetconfig_netlink.c:1199)
==91547== by 0x4033D3: lst_yaml_groups.constprop.0 (lst.c:1159)
==91547== by 0x404CAD: jt_lst_list_group (lst.c:2027)
==91547== by 0x48828F4: cfs_parser_execarg (parser.c:177)
==91547== by 0x48828F4: cfs_parser (parser.c:160)
==91547== by 0x4A0358F: (below main) (in /usr/lib64/libc.so.6)
==91547==
==91547== LEAK SUMMARY:
==91547== definitely lost: 376 bytes in 3 blocks
==91547== indirectly lost: 65,536 bytes in 1 blocks
==91547== possibly lost: 0 bytes in 0 blocks
==91547== still reachable: 0 bytes in 0 blocks
==91547== suppressed: 0 bytes in 0 blocks
==91547==
==91547== For lists of detected and suppressed errors, rerun with: -s
==91547== ERROR SUMMARY: 3 errors from 3 contexts (suppressed: 0 from 0)