LU-19234 lst: Fix leak under emitter/parser delete (1)

This is first series of patch with fixes memory
leak which is leaked when yaml_emitter_delete()
and yaml_parser_delete() is called. All calls to
yaml_emitter_delete() will be replaced with
yaml_emitter_cleanup() and yaml_parser_delete()
will be replaced with yaml_parser_cleanup() which
is introduced in this patch.

This patch gets the reference back then release
memory after call to yaml_emitter_delete(). To
do this both calls to delete emiiter and memory
held is placed under a single call to
yaml_emitter_cleanup().

Similarly, it gets the reference back then release
memory after call to yaml_parser_delete(). To
do this both calls to delete emiiter and memory
held is placed under a single call to
yaml_emitter_cleanup().

$ valgrind --leak-check=full lst list_group
------------
Before Patch
------------
==41478== LEAK SUMMARY:
==41478==    definitely lost: 376 bytes in 3 blocks
==41478==    indirectly lost: 65,536 bytes in 1 blocks
==41478==      possibly lost: 0 bytes in 0 blocks
==41478==    still reachable: 0 bytes in 0 blocks
==41478==         suppressed: 0 bytes in 0 blocks

-----------
After patch
-----------
==84336== LEAK SUMMARY:
==84336==    definitely lost: 224 bytes in 1 blocks
==84336==    indirectly lost: 0 bytes in 0 blocks
==84336==      possibly lost: 0 bytes in 0 blocks
==84336==    still reachable: 0 bytes in 0 blocks
==84336==         suppressed: 0 bytes in 0 blocks

Note 224 unfreed bytes comes from libnl and not lustre code
Therefore which require fix from within libnl and not lustre

==84336== 224 bytes in 1 blocks are definitely lost in loss record 1 of 1
==84336==    at 0x484BF70: calloc (vg_replace_malloc.c:1595)
==84336==    by 0x499946D: nl_cb_alloc (in /usr/lib64/libnl-3.so.200.26.0)
==84336==    by 0x499DC85: nl_socket_alloc (in /usr/lib64/libnl-3.so.200.26.0)
==84336==    by 0x4033C3: lst_yaml_groups.constprop.0 (lst.c:1150)
==84336==    by 0x404D0D: jt_lst_list_group (lst.c:2053)
==84336==    by 0x4882AF1: cfs_parser_execarg (parser.c:214)
==84336==    by 0x4882AF1: cfs_parser (parser.c:186)
==84336==    by 0x4A0458F: (below main) (in /usr/lib64/libc.so.6)

Test-Parameters: trivial testlist=sanity-lnet
Signed-off-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Change-Id: I49a4932bf46c3b7690f716f67c40c2ab3dd8b31b
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60529
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Frank Sehr <fsehr@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Chris Horn <chris.horn@hpe.com>